fix: cursor colour visibility in code view

--- a/src/main.scss
+++ b/src/main.scss
@@ -79,6 +79,10 @@ html {
     }
   }
 
+  .note-codable {
+    caret-color: #cccccc;
+  }
+
   .note-color-btn {
     border-color: var(--sn-stylekit-border-color);
   }
